--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         // ================= 4. 音频系统 =================
         const audio = new Audio();
-        const primaryUrl = 'https://er-sycdn.kuwo.cn/0ae521a27ef7e76d83bf14a3fbf5da76/695c4388/resource/30106/trackmedia/M5000003q3SG3W2iqQ.mp3?bitrate$128&from=vip';
+        const primaryUrl = 'summer.mp3';
 
         audio.crossOrigin = "anonymous";
         audio.loop = true;
@@ -255,4 +255,5 @@
         });
     </script>
 </body>
+
 </html>
