--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         // ================= 4. 音频系统 =================
         const audio = new Audio();
-        const primaryUrl = 'summer.mp3';
+        const primaryUrl = 'music.mp3';
 
         audio.crossOrigin = "anonymous";
         audio.loop = true;
@@ -257,3 +257,4 @@
 </body>
 
 </html>
+
